# Fractions

./: .gitignore  CMakeLists.txt  Fractions.pro  README.md
Fraction/: Fraction.cpp  Fraction.h
FractionLib/: CMakeLists.txt  FractionLib.pro  fraction.cpp  fraction.h  fractionlib.cpp  fractionlib.h  fractionlib_global.h
FractionTests/: CMakeLists.txt  FractionTests.cpp  FractionTests.pro  gtest_dependency.pri  main.cpp  tst_testfractions.h
